# Wireless-Spectrum-Hypervisor

./: .gitignore  CMakeLists.txt  README.md  compileProto.sh  kill.sh  run.sh
communicator/: CMakeLists.txt  interAI.proto  interf.proto
communicator/cpp/: CMakeLists.txt  CPPExample.cpp  CommManager.cpp  CommManager.h  LayerCommunicator.cpp  LayerCommunicator.h  Maybe.h  communicator_wrapper.cpp  communicator_wrapper.h  utils.cpp  utils.h
communicator/python/: Communicator.py  Example.py  LayerCommunicator.py
phy/: CMakeLists.txt  README.md
phy/cmake/modules/: FindSSE.cmake
phy/matlab/: read_iq_samples_and_run_fft.m  read_samples_and_plot.m
phy/matlab/mcf_tdma_simulations/: OFDMvsUFMCExample_v0.m  calculate_channel_center_frequency.m  calculate_channel_center_frequency_old_way.m  calculate_mcf_tdma_channel_center_frequencies.m  check_basic_test_sequence.m  check_basic_test_sequencev2.m  check_mcf_tdma_emissions.m  check_mcf_tdma_windowing.m  check_phy_resource_mapping.m  check_phy_resource_mappingv1.m  check_resource_grid.m  check_resource_gridv1.m  check_vphy_rx_subframe.m  check_vphy_rx_subframev2.m  check_vphy_rx_subframev3.m  check_vphy_rx_subframev3_aux.m  check_vphy_subframe.m  check_windowing.m  downconversion.m  filtered_multi_band_phy_concept.m  frequency_shift.m  frequency_shiftv1.m  frequency_shiftv2.m  ifft_channelization.m  ifft_channelizationv1.m  mcf_tdma_1dot4MHz_concept_four_different_signals.m  mcf_tdma_1dot4MHz_concept_four_different_signals_reception_side.m  mcf_tdma_1dot4MHz_concept_multi_bank_filter.m  mcf_tdma_1dot4MHz_concept_tx_rx_ber.m  mcf_tdma_1dot4MHz_concept_with_fixed_point_analysis.m  mcf_tdma_1dot4MHz_conceptv1_two_different_signals.m  mcf_tdma_1dot4MHz_conceptv1_two_different_signalsv1.m  mcf_tdma_2_1dot4MHz.m  mcf_tdma_channelizer_channel_center_frequencies.m  mcf_tdma_compare_the_use_of_windows.m  mcf_tdma_windowing_analysis.m  mcf_tdma_windowing_analysis_average.m  pcfich_positioningv0.m  pdcch_positioningv0.m  pdsch_positioningv0.m  (+9 more)
phy/matlab/mcf_tdma_simulations/ber/: QAM_test.m  channelizer_test.m  comb.m  complex_exponential.m  dft_property.m  dft_propertyv1.m  dft_propertyv2.m  dft_propertyv4.m  filter_mcf_channelizer.m  mcf_tdma_ber_analysis.m  mcf_tdma_ber_analysis_single_phy_v5_20190628T213134.mat  mcf_tdma_ber_analysis_single_phy_v8_20190702T130827.mat  mcf_tdma_ber_analysis_single_phy_v8_20190702T142549.mat  mcf_tdma_ber_analysis_single_phy_v8_20190702T194158.mat  mcf_tdma_ber_analysis_single_phy_v8_20190703T210203.mat  mcf_tdma_ber_analysis_single_phy_v8_20190704T142134.mat  mcf_tdma_ber_analysis_single_phy_v8_20190705T201131.mat  mcf_tdma_ber_analysis_single_phyv2.m  mcf_tdma_ber_analysis_single_phyv3.m  mcf_tdma_ber_analysis_single_phyv4.m  mcf_tdma_ber_analysis_single_phyv5.m  mcf_tdma_ber_analysis_single_phyv6.m  mcf_tdma_ber_analysis_single_phyv7.m  mcf_tdma_ber_analysis_single_phyv7_aux.m  mcf_tdma_ber_analysis_single_phyv8.m  mcf_tdma_ber_analysis_v10_20190629T092030.mat  mcf_tdma_ber_analysis_v10_20190629T093449.mat  (+75 more)
phy/matlab/psch/: check_phy_subframe.m  check_resource_grid.m
phy/matlab/sync/: check_pss_correlation_pdf_test.m  test_pss_peak.m
phy/src/: CMakeLists.txt  check_hypervisor_read.c  check_tx_timestamps.c  decode_subframe.c  fir_filter_checking.c  lte_1dot4MHz_channelizer.grc  mcf_tdma_check_channel_change.c  measure_throughput_fd.c  measure_throughput_fd.h  phy_test.c  read_phy_samples_with_np.c  test_circular_buffer.c  test_windowing.c
phy/test_scripts/: assess_online_phy_bw_and_env_update.py  check_tx_frequency_issue.py  continuous_reception.py  continuous_receptionv2.py  continuous_receptionv3.py  continuous_transmission.py  continuous_transmissionv2.py  continuous_transmissionv3.py  measure_self_reception_performance.py  put_phy_into_idle_rx_mode.py  receive_data.py  test_communication.py  test_lbt.py  test_online_bandwidth_change.py  test_sensing_state.py  test_sw_rf_mon.py  test_transmission_scheduling.py  throughput_optimization.py  transmit_data.py  tx_issue_debug_reception.py  tx_issue_debug_transmission.py
phy/test_scripts/demo/: measure_lbt_performance.py  measure_lbt_performance_thread.py  test_lbt.py
phy/test_scripts/scenario_test/: scenario_test.py
phy/test_scripts/tput/: expected_tput.py  getTBSize.m  plot_tputv9.m  tput_test.py
srslte/: CMakeLists.txt
srslte/examples/: check_discontinous_tx.c  fir_filter_checking.h  fir_filter_checking_mac_like.c  hypervisor_test.c  mcf_tdma_basic_test.c  measure_throughput.c  measure_throughput.h  measure_throughput_fd_auto.c  measure_throughput_fd_auto.h  stress_test.c  test_communicator.c  test_memory_allocation.c  test_tx_timestamp.c  test_vec_prod.c
srslte/include/srslte/: config.h  srslte.h
srslte/include/srslte/dft/: dft.h  (+1 more)
srslte/lib/: CMakeLists.txt
srslte/lib/ch_estimation/: chest_dl.c  refsignal_dl.c
srslte/lib/channel/: channel_emulator.c
srslte/lib/common/: phy_common.c  sequence.c
srslte/lib/dft/: dft_fftw.c  ofdm.c
srslte/lib/fec/: rm_turbo.c  softbuffer.c  turbocoder.c  turbodecoder.c  turbodecoder_gen.c  turbodecoder_sse.c
srslte/lib/io/: filesink.c  filesource.c
srslte/lib/phch/: pbch.c  pcfich.c  pdcch.c  pdsch.c  prb_dl.c  prb_dl.h  regs.c  sch.c  uci.c
srslte/lib/resampling/: interp.c
srslte/lib/rf/: CMakeLists.txt  rf_ch_emulator_imp.c  rf_ch_emulator_imp.h  rf_dev.h  rf_imp.c  rf_uhd_imp.c  rf_uhd_imp.h
srslte/lib/sync/: cfo.c  cp.c  find_sss.c  pss.c  sss.c  sync.c
srslte/lib/ue/: ue_dl.c  ue_sync.c
srslte/lib/utils/: cexptab.c  convolution.c  cpp_wrappers.cpp  vector.c
srslte/phy/: CMakeLists.txt  helpers.c  helpers.h  hypervisor_control.c  hypervisor_control.h  hypervisor_rx.c  hypervisor_rx.h  hypervisor_tx.c  hypervisor_tx.h  phy.c  phy.h  phy_comm_control.c  phy_comm_control.h  plot.c  plot.h  transceiver.h  vphy_rx.c  vphy_rx.h  vphy_tx.c  vphy_tx.h
srslte/rf_monitor/: CMakeLists.txt  iq_dump_plus_sensing.c  iq_dumping.c  lbt.c  lbt.h  rf_monitor.c  rf_monitor.h  rf_monitor_types.h  rssi_monitoring.c  spectrum_sensing_alg.c  spectrum_sensing_alg.h  statistics_helpers.cpp
(+53 files in other folders)
